syntax = "proto3";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc Validate (ValidateRequest) returns (UserPayload);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message ValidateRequest {
  string token = 1;
}

message AuthResponse {
  string access_token = 1;
}

message UserPayload {
  string username = 1;
}
